solc_ossfuzz_seed_corpus/test_solidity/test_a65ac799a4afdaa9f1f395636a456d6e48f0fad17e3d432b3d6a059be7d60ada_526ca1b62ba1eb5c8cddffeeb044ec889f3ae48a_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
type T0 is int192;
error er0();
function f0(bytes10 i0)     returns(bytes32 o0)
{
  {
    while (false)
    {
    }
    return (keccak256("00000000000000000000000000000000000000000000000000000000000000000000000000000000000000"));
    if (true)
    {
      if (true)
      {
      }
      else if (true)
      {
      }
      else
      {
      }
      unchecked {
      }
    }
    else if ((bytes24(0x000000000000000000000000000000000000000000000000) > bytes24(0xc612275d2306cd69bf997d2ba1d8bf13d44b25c28633b552)))
    {
      assembly
      {
        let al0 := i0
        if al0
        {
          mstore8(mod(xor(78366220102214811274253307398680615921482321935642160978401551527503108554478, 115792089237316195423570985008687907853269984665640564039457584007913129639935), 2048), i0)
          function af0() -> ao0, ao1
          {
            let al1, al2 := af0()
            al2 := mload(mod(ao0, 2048))
          }
        }
        function af1(ai0, ai1) -> ao2, ao3, ao4, ao5
        {
        }
      }
    }
    else if (true)
    {
    }
    if (true)
    {
      bool l0 = false;
      assembly
      {
        switch i0
        default
        {
          o0 := l0
          switch mload(mod(i0, 2048))
          case 115792089237316195423570985008687907853269984665640564039457584007913129639935
          {
            l0 := or(115792089237316195423570985008687907853269984665640564039457584007913129639935, 115792089237316195423570985008687907853269984665640564039457584007913129639935)
          }
          case 115792089237316195423570985008687907853269984665640564039457584007913129639935
          {
          }
          case 0
          {
          }
        }
        switch 0
        default
        {
          l0 := 0
        }
        o0 := 32764101636724207977470048869559019113341952965179005639115642534636505425908
      }
    }
    else if ((bytes23(0x0000000000000000000000000000000000000000000000) <= bytes23(0xffffffffffffffffffffffffffffffffffffffffffffff)))
    {
    }
    else
    {
    }
    (o0) = (keccak256(bytes("00000000000000000000000000000000dc66102e7f07d369ce7ec4436a25ac9de38b1e92c2d9")));
  }
}
// ----
// Warning 9592: (su0.sol:1153-1713): "switch" statement with only a default case.
// DeclarationError 6792: (su0.sol:1555-1662): Duplicate case "115792089237316195423570985008687907853269984665640564039457584007913129639935" defined.
// Warning 9592: (su0.sol:1722-1784): "switch" statement with only a default case.
